# modelflow

./: .gitignore  README.md  Requirment.txt  pyproject.toml  setup.py
hugging-smith/Model.config/: Model.py
modelflow/: __init__.py  __main__.py
modelflow/Model.config/: Model.py
modelflow/modelConfig/: Model.py  Tokenizer.py  __init__.py
modelflow/templates/: .env.j2  Dockerfile.j2  Readme.txt.j2  api.py.j2  dockerignore.j2  model.py.j2  model_log.j2  requirements.txt.j2
