[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelflow"
version = "0.1.0"
description = "Auto-generate HuggingFace model skeletons with deployment configs"
authors = [{ name="Maharshi Patel", email="maharshi7178@gmail.com" }]
requires-python = ">=3.7"
dependencies = [
    "transformers",
    "jinja2", 
    "fastapi",
    "uvicorn"
]

[project.scripts]
modelflow = "modelflow.__main__:main" 